# KanonBot

./: .editorconfig  .gitignore  KanonBot.csproj  KanonBot.sln  QUICKSTART.md  README.md  Readme.md  config.toml  convert.sh
PerformanceCalculator/: Calculator.cs  PerformanceCalculator.csproj
PerformanceCalculator/API/: LegacyHelper.cs  PerformanceCalculator.cs  ProcessorWorkingBeatmap.cs
Properties/: launchSettings.json
RosuPP/: .editorconfig  .gitignore  Cargo.toml  Rosu.targets  RosuPP.csproj
RosuPP/bindings/: bindings.cs  bindings.generated.h  bindings.generated.py  bindings.h  bindings.py
RosuPP/src/: calculator.rs  error.rs  example.rs  lib.rs  params.rs  result.rs
RosuPP/tests/: bindings_c.rs  bindings_cs.rs  bindings_py.rs
TestFiles/: ImageHelper示例文件.txt  Kakichoco - Zan'ei (Lasse) [Illusion].osu  beatmap.json  ppplus.json  score.json  user.json
Tests/: Misc.cs  OSU.cs  Tests.csproj  UnitTest1.cs
predefine_files/: mail_desu_life_mailaddr_verify_template.txt
resources/database/: database_20231106.sql
rosu-pp-ffi-master/: LICENSE  Program.cs  RosuPP.csproj
rosu-pp-ffi-master/bindings/: bindings.py
rosu-pp-ffi-master/src/: lib.rs
rosu-pp-ffi-master/tests/: bindings.rs
src/: .editorconfig  Config.cs  Error.cs  Event.cs  FodyWeavers.xml  GlobalUsings.cs  Http.cs  KanonBot.csproj  Mail.cs  Message.cs  Program.cs  RetryHelper.cs  Serializer.cs  Utils.cs  Websocket.cs
src/API/: Osu.cs  oss.cs
src/Command/: BotCmdHelper.cs  CommandDetail.cs  CommandRegister.cs  (+3 more)
test files/: ImageHelper示例文件.txt  cqmessage.json  gulidmsg.json  message.json
(+156 files in other folders)
