[package]
name = "rosu-pp-ffi"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
interoptopus = "0.14.13"
rosu-pp = "0.8.0"

[dev-dependencies]
interoptopus_backend_csharp = "0.14.13"
interoptopus_backend_c = "0.14.13"
interoptopus_backend_cpython = "0.14.13"

