[package]
name = "rosu-pp-ffi"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
interoptopus = "0.14.15"
rosu-pp = "0.9.2"
thiserror = "1.0.37"

[dev-dependencies]
interoptopus_backend_csharp = "0.14.15"
interoptopus_backend_c = "0.14.15"
interoptopus_backend_cpython = "0.14.15"

