[package]
name = "rosu-pp-ffi"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
interoptopus = "0.14.19"
rosu-pp = "0.10.0"
thiserror = "1.0.50"

[dev-dependencies]
interoptopus_backend_csharp = "0.14.20"
interoptopus_backend_c = "0.14.18"
interoptopus_backend_cpython = "0.14.19"

